# Super-Agent-OS

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/api/: feishu_webhook.py  feishu_ws.py  main.py
app/core/: agent.py  commands.py  factory.py  reminder.py
app/core/marketplace/: __init__.py  installer.py  models.py  search.py
app/core/memory/: __init__.py  compactor.py  long_term.py  models.py  store.py
app/core/provider/: base.py  deepseek.py  doubao.py  qwen.py
app/skills/: __init__.py  base.py  reminder.py
app/skills/marketplace/: skill.py
app/skills/reminder/: __init__.py  bitable.py  prompts.py  scheduler.py  skill.py
app/utils/: config.py  feishu.py  logger.py
docs/: Super-Agent-OS 设计文档.md  implementation-plan.md  implementation-roadmap.md
